--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -7,6 +7,13 @@
 }
 
 table.baranggudang tr td:last-child,
-table.produk tr td:last-child{
+table.cashflow tr td:nth-child(5),
+table.cashflow tr td:nth-child(6),
+table.produk tr td:last-child,
+table.belanjaharian tr td:last-child{
   text-align: right;
+}
+
+select {
+  height: 28px;
 }
