--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -7,10 +7,17 @@
 }
 
 table.baranggudang tr td:last-child,
+table.baranggudang tr td:nth-child(4),
+table.baranggudang tr td:nth-child(5),
+table.baranggudang tr td:nth-child(6),
 table.cashflow tr td:nth-child(5),
 table.cashflow tr td:nth-child(6),
 table.produk tr td:last-child,
+table.produk tr td:nth-child(4),
 table.setoran tr td:last-child,
+table.komposisi tr td:last-child,
+table.produkoutlet tr td:last-child,
+table.pemasukangudang tr td:last-child,
 table.belanjaharian tr td:last-child{
   text-align: right;
 }
