--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -18,7 +18,10 @@ table.setoran tr td:last-child,
 table.komposisi tr td:last-child,
 table.produkoutlet tr td:last-child,
 table.pemasukangudang tr td:last-child,
-table.belanjaharian tr td:last-child{
+table.debitur tr td:last-child,
+table.pinjaman tr td:last-child,
+table.pinjaman tr td:nth-child(5),
+table.belanja tr td:last-child{
   text-align: right;
 }
 
