--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -7,6 +7,8 @@
 }
 
 table.baranggudang tr td:last-child,
+table.ayam tr td:nth-child(3),
+table.ayam tr td:nth-child(4),
 table.baranggudang tr td:nth-child(4),
 table.baranggudang tr td:nth-child(5),
 table.baranggudang tr td:nth-child(6),
@@ -21,6 +23,12 @@ table.pemasukangudang tr td:last-child,
 table.debitur tr td:last-child,
 table.pinjaman tr td:last-child,
 table.pinjaman tr td:nth-child(5),
+table.belanjaayam tr td:nth-child(5),
+table.belanjaayam tr td:nth-child(6),
+table.belanjaayam tr td:nth-child(7),
+table.sirkulasibarang tr td:nth-child(6),
+table.sirkulasibarang tr td:nth-child(7),
+table.sirkulasibarang tr td:nth-child(8),
 table.belanja tr td:last-child{
   text-align: right;
 }
