--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -33,6 +33,12 @@ table.sirkulasiayam tr td:nth-child(6),
 table.sirkulasiayam tr td:nth-child(7),
 table.sirkulasiayam tr td:nth-child(8),
 table.sirkulasiayam tr td:nth-child(9),
+table.pemotongan tr td:nth-child(3),
+table.pemotongan tr td:nth-child(4),
+table.pemotongan tr td:nth-child(5),
+table.pemotongan tr td:nth-child(6),
+table.pemotongan tr td:nth-child(7),
+table.pemotongan tr td:nth-child(8),
 table.pengeluarangudang tr td:last-child,
 table.belanja tr td:last-child{
   text-align: right;
