--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -33,6 +33,8 @@ table.sirkulasiayam tr td:nth-child(6),
 table.sirkulasiayam tr td:nth-child(7),
 table.sirkulasiayam tr td:nth-child(8),
 table.sirkulasiayam tr td:nth-child(9),
+table.sirkulasiproduk tr td:nth-child(6),
+table.sirkulasiproduk tr td:nth-child(7),
 table.pemotongan tr td:nth-child(3),
 table.pemotongan tr td:nth-child(4),
 table.pemotongan tr td:nth-child(5),
