--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -42,6 +42,7 @@ table.pemotongan tr td:nth-child(6),
 table.pemotongan tr td:nth-child(7),
 table.pemotongan tr td:nth-child(8),
 table.pengeluarangudang tr td:last-child,
+table.produksigudang tr td:last-child,
 table.belanja tr td:last-child{
   text-align: right;
 }
