laporan penjualan global

--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -41,6 +41,9 @@ table.pemotongan tr td:nth-child(5),
 table.pemotongan tr td:nth-child(6),
 table.pemotongan tr td:nth-child(7),
 table.pemotongan tr td:nth-child(8),
+table.laporanpenjualan tr td:nth-child(5),
+table.laporanpenjualan tr td:nth-child(6),
+table.laporanpenjualan tr td:nth-child(7),
 table.laporanbelanja tr td:nth-child(6),
 table.laporanbelanja tr td:nth-child(7),
 table.laporanbelanja tr td:nth-child(8),
@@ -49,6 +52,9 @@ table.produksigudang tr td:last-child,
 table.outlet tr td:last-child,
 table.belanja tr td:last-child,
 
+table.laporanpenjualan tfoot tr th:nth-child(5),
+table.laporanpenjualan tfoot tr th:nth-child(6),
+table.laporanpenjualan tfoot tr th:nth-child(7),
 table.laporanbelanja tfoot tr th:nth-child(6),
 table.laporanbelanja tfoot tr th:nth-child(7),
 table.laporanbelanja tfoot tr th:nth-child(8)
