--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -41,6 +41,11 @@ table.pemotongan tr td:nth-child(5),
 table.pemotongan tr td:nth-child(6),
 table.pemotongan tr td:nth-child(7),
 table.pemotongan tr td:nth-child(8),
+table.laporanbawaan1 tr td:nth-child(5),
+table.laporanbawaan1 tr td:nth-child(6),
+table.laporansirkulasibahan tr td:nth-child(5),
+table.laporansirkulasibahan tr td:nth-child(6),
+table.laporansirkulasibahan tr td:nth-child(7),
 table.laporanpenjualan tr td:nth-child(5),
 table.laporanpenjualan tr td:nth-child(6),
 table.laporanpenjualan tr td:nth-child(7),
@@ -51,13 +56,26 @@ table.pengeluarangudang tr td:last-child,
 table.produksigudang tr td:last-child,
 table.outlet tr td:last-child,
 table.belanja tr td:last-child,
+table.laporanstockgudang tr td:last-child,
+table.laporanbawaan0 tr td:last-child,
+table.laporanbawaan3 tr td:last-child,
+table.laporanbawaan2 tr td:last-child,
 
+table.laporanbawaan1 tfoot tr th:nth-child(5),
+table.laporanbawaan1 tfoot tr th:nth-child(6),
+table.laporanbawaan0 tfoot tr th:last-child,
+table.laporanbawaan2 tfoot tr th:last-child,
+table.laporanbawaan3 tfoot tr th:last-child,
+table.laporansirkulasibahan tfoot tr th:nth-child(5),
+table.laporansirkulasibahan tfoot tr th:nth-child(6),
+table.laporansirkulasibahan tfoot tr th:nth-child(7),
 table.laporanpenjualan tfoot tr th:nth-child(5),
 table.laporanpenjualan tfoot tr th:nth-child(6),
 table.laporanpenjualan tfoot tr th:nth-child(7),
 table.laporanbelanja tfoot tr th:nth-child(6),
 table.laporanbelanja tfoot tr th:nth-child(7),
 table.laporanbelanja tfoot tr th:nth-child(8)
+
 {
   text-align: right;
 }
