commit to continue pesanan

--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -19,7 +19,6 @@ table.setoran tr td:last-child,
 table.komposisi tr td:last-child,
 table.produkoutlet tr td:last-child,
 table.pemasukangudang tr td:last-child,
-table.debitur tr td:last-child,
 table.pinjaman tr td:last-child,
 table.pinjaman tr td:nth-child(5),
 table.belanjaayam tr td:nth-child(5),
@@ -70,9 +69,19 @@ table.laporanstockoutlet2 tr td:last-child,
 table.laporanstockoutlet1 tr td:nth-child(4),
 table.laporanstockoutlet1 tr td:nth-child(5),
 table.laporanpengeluaran tr td:last-child,
+table.laporansetoran0 tr td:last-child,
+table.laporanhutang tr td:last-child,
+table.laporanlabarugi tr td:nth-child(4),
+table.laporanlabarugi tr td:nth-child(5),
+table.laporanlabarugi tr td:nth-child(6),
 
-table.laporanbawaan1 tfoot tr th:nth-child(5),
+table.laporanlabarugi tfoot tr th:nth-child(4),
+table.laporanlabarugi tfoot tr th:nth-child(5),
+table.laporanlabarugi tfoot tr th:nth-child(6),
+table.laporanlabarugi tfoot tr th:nth-child(6),
 table.laporanbawaan1 tfoot tr th:nth-child(6),
+table.laporansetoran0 tfoot tr th:last-child,
+table.laporanhutang tfoot tr th:last-child,
 table.laporanbawaan0 tfoot tr th:last-child,
 table.laporanbawaan2 tfoot tr th:last-child,
 table.laporanbawaan3 tfoot tr th:last-child,
