delete subform item

--- a/assets/css/henrisusanto.css
+++ b/assets/css/henrisusanto.css
@@ -120,3 +120,8 @@ tfoot {
 tfoot tr th {
   padding: 8px 16px;
 }
+
+#mws-container > div.container > form > div:nth-child(2) > div.mws-panel-body.no-padding > 
+div.expandable-form-edit > div > div:last-child > div > input {
+  width: 60%
+}
